See one card info

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.pokemonmartin"
+        applicationId "com.example.pokemoncardprice"
         minSdk 21
         targetSdk 32
         versionCode 1
