Save data storage internal

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
 
     defaultConfig {
         applicationId "com.example.pokemoncardprice"
-        minSdk 21
-        targetSdk 32
+        minSdk 14
+        targetSdk 28
         versionCode 1
         versionName "1.0"
 
@@ -32,6 +32,7 @@ android {
 
 dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.google.code.gson:gson:2.8.2'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
