--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
 
     defaultConfig {
         applicationId "com.example.pokemoncardprice"
-        minSdk 14
+        minSdk 16
         targetSdk 28
         versionCode 1
         versionName "1.0"
@@ -45,5 +45,10 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
+    implementation 'com.google.gms:google-services:4.0.1'
+    implementation 'com.google.firebase:firebase-core:17.0.0'
+    implementation 'com.google.firebase:firebase-ml-natural-language:21.0.1'
+    implementation 'com.google.firebase:firebase-ml-natural-language-language-id-model:20.0.4'
+    implementation 'com.google.firebase:firebase-ml-natural-language-translate-model:20.0.4'
+    implementation 'com.google.android.material:material:1.0.0-alpha1'
 }
