--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,11 +6,11 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.pokemoncardprice"
+        applicationId "com.pcp.pokemoncardprice"
         minSdk 19
-        targetSdk 28
-        versionCode 1
-        versionName "1.0"
+        targetSdk 30
+        versionCode 4
+        versionName "1.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
