--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,9 @@
             android:exported="true"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
-            >
+            android:windowSoftInputMode="adjustPan">
+
+        >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
